this should do it

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "normalize"
+        "normalize",
         "github-light",
         "base",
         "syntax-highlighting"
