--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,10 @@ a {
   a:hover {
     text-decoration: underline; }
 
+%vertical-rhythm {
+    margin-bottom: $spacing-unit / 2;
+}
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
