--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <header class="page-header">
         <h1 class="project-name">{{ site.project.name }}</h1>
         <h2 class="project-tagline">{{ site.project.tagline }}</h2>
-        <a href="{{ site.project.github }}" class="btn">API</a>
+        <a href="{{ site.project.github }}" class="btn">View on GitHub</a>
         <a href="{{ site.project.github }}zipball/master" class="btn">Download .zip</a>
         <a href="{{ site.project.github }}tarball/master" class="btn">Download .tar.gz</a>
     </header>
