--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,9 @@
 
 $spacing-unit:     30px;
 
+$lightAccentColor: #AA076B;
+$darkAccentColor: #61045F;
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "normalize",
