--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,10 +10,11 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
-  text-decoration: none; }
+  color: $darkAccentColor;
+  text-decoration: none;
+  transition: color .2s; }
   a:hover {
-    text-decoration: underline; }
+    color: $lightAccentColor; }
 
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
@@ -60,8 +61,8 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: mix($lightAccentColor, $darkAccentColor);
+  background-image: linear-gradient(120deg, $lightAccentColor, $darkAccentColor); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -116,7 +117,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: $lightAccentColor; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
