--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>{% if page.title %}{{ page.title }} // {% endif %}{{ site.project.name | strip_html }} by CupOfTea696</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="{{ site.url }}">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen">
 </head>
 <body>
     <header class="page-header">
-        <h1 class="project-name">{{ site.project.name }}</h1>
+        <h1 class="project-name">
+            <a href="">{{ site.project.name }}</a>
+        </h1>
         <h2 class="project-tagline">{{ site.project.tagline }}</h2>
         <a href="{{ site.project.github }}" class="btn">View on GitHub</a>
         <a href="{{ site.project.github }}zipball/master" class="btn">Download .zip</a>
