--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,8 +133,8 @@ a {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.9rem;
-  color: #383e41;
-  background-color: #f3f6fa;
+  color: #8a6d3b;
+  background-color: #FCF8E3;
   border-radius: 0.3rem; }
 .main-content pre {
   padding: 0.8rem;
