navigation and such

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <header class="page-header">
+        {% include nav.html %}
+        
         <h1 class="project-name">
             <a href="">{{ site.project.name }}</a>
         </h1>
