--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -1,1 +1,25 @@
+// Base components
+
+label{
+    cursor: pointer;
+}
+
+%flexRow, %flexCol{
+    display: flex;
+}
+%flexRow{
+    flex-direction: row;
+}
+%flexCol{
+    flex-direction: column;
+}
+
+%flexAround{
+    justify-content: space-around;
+}
+%flexBetween{
+    justify-content: space-between;
+}
+
+@import "components/meta";
 @import "components/nav";
