--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <main id="content" class="page">
             {% if content contains "<!-- header end -->" %}
                 {% assign the_content = content | split: '<!-- header end -->' %}
-                {{ the_content[1] }}
+                {{ the_content[1] | replace_first: '<p>', '<p class="text/lead">' }}
             {% else %}
                 {{ content }}
             {% endif %}
