Improvements + doc sidebar + doc access

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,8 @@
-        </main>
         <footer class="site-footer">
-            <span class="site-footer-owner"><a href="https://github.com/CupOfTea696/TwoStream">{{ site.project.name }}</a> is maintained by <a href="https://github.com/CupOfTea696">CupOfTea696</a>.</span>
+            <span class="site-footer-owner">
+                <a href="{{ site.project.github }}">{{ site.project.alt_name }}</a>
+                is maintained by <a href="https://github.com/{{ site.project.author }}">{{ site.project.author }}</a>.
+            </span>
         </footer>
     </section>
 </body>
