--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <section class="nav/left">
-        <a href="" class="nav/item">Home</a>
+        <a href="" class="nav/item">{{ site.project.name }}</a>
     </section>
     <section class="nav/right">
         {% for item in site.navigation %}
