--- a/_sass/components/_meta.scss
+++ b/_sass/components/_meta.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     width: 100%;
     height: 2rem;
-    max-width: 64rem;
+    max-width: 1170px;
     padding: 0 6rem;
     @extend %flexRow;
     justify-content: center;
