--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
 {% include head.html %}
-    {% capture page_id %}{{ page.url | remove: 'index.html' | slugify }}{% endcapture %}
     <section class="main-content" id="{% if page_id != '' %}{{ page_id }}{% else %}home{% endif %}">
-        <main id="content" class="page">
-            {% if content contains "<!-- header end -->" %}
-                {% assign the_content = content | split: '<!-- header end -->' %}
-                {{ the_content[1] | replace_first: '<p>', '<p class="text/lead">' }}
-            {% else %}
-                {{ content }}
-            {% endif %}
+        <div class="body clearfix">
+            {% include sidebar.html %}
+            <main id="content" class="page">
+                {% if content contains "<!-- header end -->" %}
+                    {% assign the_content = content | split: '<!-- header end -->' %}
+                    {{ the_content[1] | replace_first: '<p>', '<p class="text/lead">' }}
+                {% else %}
+                    {{ content }}
+                {% endif %}
+            </main>
+        </div>
         {% include foot.html %}
