--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -5,11 +5,22 @@
     width: 100%;
     height: 5rem;
     padding: 0 6rem;
+    font-size: 1.1rem;
+    color: #FFF;
     background-color: rgba(mix(#B93888, #893680), .8);
     background-image: linear-gradient(120deg, rgba(#B93888, .8), rgba(#893680, .8));
     border-bottom: 1px solid rgba(#BC72A8, .9);
-    font-size: 1.1rem;
     z-index: 99;
+    
+    + .main-content{
+        .body{
+            margin-top: 5rem;
+            
+            @media screen and (max-width: 42em) {
+                margin-top: 4rem;
+            }
+        }
+    }
     
     @include part(left, right){
         height: 100%;
@@ -28,8 +39,9 @@
         float: left;
         height: 100%;
         padding: 0 2rem;
-        transition: background .2s;
         line-height: 5rem;
+        color: inherit;
+        transition: background .2s;
         
         &:first-child{
             margin-left: -1rem;
@@ -40,6 +52,7 @@
         }
         
         &:hover{
+            color: inherit;
             background: rgba(255, 255, 255, .2);
         }
     }
