--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     {% capture page_id %}{{ page.url | remove: '/index.html' | slugify }}{% endcapture %}
+    {% capture page_url %}{{ page.url | remove_first:'/' | remove: '/index.html' }}{% endcapture %}
+    {% capture page_ancestors %}{{ page_url | split:'/' }}{% endcapture %}
+    
     <title>{% if page.title %}{{ page.title }} // {% endif %}{{ site.project.alt_name }} by {{ site.project.author }}</title>
     
     <base href="{{ site.url }}">
