--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     </section>
     <section class="nav/right">
         {% for item in site.navigation %}
-            <a href="{{ item.link }}" class="nav/item">{{ item.name }}</a>
+            <a href="{{ item.url }}" class="nav/item">{{ item.name }}</a>
         {% endfor %}
     </section>
 </nav>
