--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,22 +1,21 @@
 {% for parent in site.navigation %}
-    {% capture page_name %}{{ page.url | remove_first:'/' | remove: '/index.html' }}{% endcapture %}
-    {% if page_name contains parent.link and parent.navigation %}
+    {% if page_url contains parent.url and parent.navigation %}
         <aside class="sidebar">
             <nav>
-                {% unless page_name == parent.link %}
-                    <a href="{{ parent.link }}" class="sidebar/parent">&laquo; {{ parent.name }}</a>
+                {% unless page_url == parent.url %}
+                    <a href="{{ parent.url }}" class="sidebar/parent">&laquo; {{ parent.name }}</a>
                 {% endunless %}
                 <ul class="sidebar/nav">
                     {% for item in parent.navigation %}
                         {% if item.type == 'category' %}
                             <li class="sidebar/nav/category">{{ item.name }}</li>
                         {% else %}
-                            {% capture full_link %}{{ parent.link }}/{{ item.link }}{% endcapture %}
-                            {% if page_name contains full_link %}
+                            {% capture full_link %}{{ parent.url }}/{{ item.url }}{% endcapture %}
+                            {% if page_url contains full_link %}
                                 <li class="sidebar/nav/item --active">{{ item.name }}</li>
                             {% else %}
                                 <li class="sidebar/nav/item">
-                                    <a href="{{ parent.link }}/{{ item.link }}">{{ item.name }}</a>
+                                    <a href="{{ parent.url }}/{{ item.url }}">{{ item.name }}</a>
                                 </li>
                             {% endif %}
                         {% endif %}
