--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -264,15 +264,17 @@ a {
 
 .site-footer {
   position:absolute;
+  left: 0;
   bottom: 0;
   width: 100%;
-  padding: 2rem 0;
-  margin-top: 2rem;
-  border-top: solid 1px #eff0f1; }
+  padding: 0 6rem; }
 
 .site-footer-owner {
   display: block;
-  font-weight: bold; }
+  font-weight: bold;
+  padding: 2rem 0;
+  margin-top: 2rem;
+  border-top: solid 1px #eff0f1; }
 
 .site-footer-credits {
   color: #819198; }
