--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -21,6 +21,7 @@ label{
     justify-content: space-between;
 }
 
+@import "components/breadcrumb";
 @import "components/meta";
 @import "components/nav";
 @import "components/sidebar";
