--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -23,6 +23,16 @@ a {
   a:hover {
     color: $lightAccentColor; }
 
+h1, h2, h3, h4, h5, h6{
+    a{
+        color: inherit;
+        
+        &:hover{
+            color: inherit;
+        }
+    }
+}
+
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
 }
@@ -153,8 +163,7 @@ a {
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-weight: normal;
-  color: $lightAccentColor; }
+  font-weight: normal; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
