--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -5,5 +5,6 @@
             </span>
         </footer>
     </section>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
