--- a/_assets/css/_components.scss
+++ b/_assets/css/_components.scss
@@ -25,4 +25,5 @@ label{
 @import "components/meta";
 @import "components/nav";
 @import "components/sidebar";
+@import "components/toc";
 @import "components/typography";
