--- a/_assets/css/_base.scss
+++ b/_assets/css/_base.scss
@@ -19,16 +19,36 @@ body {
 a {
   color: $darkAccentColor;
   text-decoration: none;
+  cursor: pointer;
   transition: color .2s; }
   a:hover {
     color: $lightAccentColor; }
 
 h1, h2, h3, h4, h5, h6{
     a{
+        position: relative;
         color: inherit;
         
         &:hover{
             color: inherit;
+        }
+        
+        &[data-scrollto]{
+            &:before{
+                content: '#';
+                position: absolute;
+                top: -1px;
+                left: -25px;
+                color: $lightAccentColor;
+                opacity: .3;
+                transition: opacity .2s;
+            }
+            
+            &:hover{
+                &:before{
+                    opacity: .6;
+                }
+            }
         }
     }
 }
