--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -6,5 +6,6 @@
         </footer>
     </section>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    {% javascript js/app %}
 </body>
 </html>
