--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     {% endif %}
     
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href='assets/css/app.css' rel='stylesheet' type='text/css'>
+    {% stylesheet css/app %}
 </head>
 <body>
     {% include nav.html %}
