--- a/_assets/css/_components.scss
+++ b/_assets/css/_components.scss
@@ -21,6 +21,7 @@ label{
     justify-content: space-between;
 }
 
+@import "components/alert";
 @import "components/breadcrumb";
 @import "components/meta";
 @import "components/nav";
